# GlowEffect

./: .gitignore  README.md  all_common.h
glow_effect/: ._glow_effect.vcxproj  all_main.cpp  glow_effect.sln  glow_effect.vcxproj  glow_effect.vcxproj.filters
glow_effect/include/: dilate_erode.hpp  gaussian_blur.hpp  old_movies.cuh
glow_effect/results/: ver_alp.pgm
glow_effect/source/: ._ImageProcessingUtil.hpp  ImageProcessingUtil.cpp  ImageProcessingUtil.hpp  TRTInference.cpp  TRTInference.hpp  all_main.h  control_gui.cpp  glow_effect.cpp  glow_effect.hpp  mipmap.h  resizeWithTexture.h  segmentation_kernels.h  wx_gui.cpp
glow_effect/source_cu/: ge_dBuffering.cu  ge_dBuffering.cuh  mipmap.cu  resizeWithTexture.cu  segmentation_kernels.cu
glow_effect/x64/Release/: CodeAnalysisResultManifest.txt  glow_effect.exe.recipe  glow_effect.vcxproj.FileListAbsolute.txt
movie_effect/: CMakeLists.txt  movie_effect.sln  movie_effect.vcxproj  movie_effect.vcxproj.filters  test.ppm
movie_effect/common/include/: half_common.h
movie_effect/common/resource/: Nvidia Brief(ish) Summary GTC 2023.docx  help_compute-sanitizer.txt  help_nvcc.txt
movie_effect/include/: icon_data.h  logo_data.h
